# monitoring-gap-analyzer

./: README.md  pyproject.toml
examples/: alert_rules.yaml  service_catalog.yaml
examples/dashboards/: checkout-dashboard.json  recommendation-dashboard.json
src/monitoring_gap_analyzer/: analyzer.py  catalog.py  cli.py  report.py  sources.py
tests/: test_analyzer.py
