[project]
name = "monitoring-gap-analyzer"
version = "0.1.0"
description = "Cross-reference a service catalog against Prometheus alert rules and Grafana dashboards to surface monitoring blind spots."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
monitoring-gap-analyzer = "monitoring_gap_analyzer.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
